--- a/main.css
+++ b/main.css
@@ -72,3 +72,8 @@
       left: 1500px;
      }
     }
+#background-music{
+        position: absolute;
+        top: 0px;
+        right: 0px;
+    }
